--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!--shiro与springboot-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.5.2</version>
+        </dependency>
+
         <!--jdbc连接池-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -79,7 +86,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.10.3</version>
+            <version>2.9.10.4</version>
             <scope>compile</scope>
         </dependency>
 
